--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,32 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
-# next.js
+# next.js build files (remove if you want to track them)
 /.next/
 /out/
 
-# production
+# production build (remove if you want to track it)
 /build
 
 # misc
 .DS_Store
 *.pem
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env files (keep private, but remove from .gitignore if you want to track them)
 .env*.local
 .env
 
-# vercel
-.vercel
+# vercel (remove this if deploying via GitHub and want to track configuration)
+/.vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
